--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        go_version: [1.13 1.14]
+        go_version: [1.13.x, 1.14.x]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Go ${{ matrix.go_version }}
