--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
           go-version: ${{ matrix.go_version }} 
       - name: Go tests
         run: |
-          echo "go test for ${{ matrix.os }} and version ${{ matrix.go_version }} 
+          echo "go test for ${{ matrix.os }} and version ${{ matrix.go_version }}"
           go test -v ./...
