--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,6 @@ jobs:
           go-version: ${{ matrix.go_version }} 
       - name: Go tests
         run: |
+          go get -v -u ./...
           echo "go test for ${{ matrix.os }} and version ${{ matrix.go_version }}"
           go test -v ./...
