--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,8 @@ jobs:
           echo "GOPATH=$GOPATH"
           echo "github.repository=${{ github.repository }}"
           go get -v -u ./...
+          cd ./src/github.com/${{ github.repository }}
           echo "current dir `pwd`"
           ls -la
-          echo "go test for ${{ matrix.os }} and version ${{ matrix.go_version }}"
+          echo "go test for ${{ matrix.os }} and version ${{ matrix.go_version }} "
           go test -v ./...
