--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,30 +4,35 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]
 
 jobs:
-  build:
-    env:
-      GOPATH: ${{ github.workspace }}
+  golangci-lint:
+      name: lint
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: golangci-lint
+          uses: golangci/golangci-lint-action@v2
+          with:
+            version: v1.33.0
+            # Optional: show only new issues if it's a pull request. The default value is `false`.
+            only-new-issues: true
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        go_version: [1.13.x, 1.14.x]
+        go_version: [1.15]
     steps:
       - name: checkout  
         uses: actions/checkout@v2
-        with:
-          path: ./src/github.com/${{ github.repository }}
       - name: Set up Go ${{ matrix.go_version }}
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go_version }} 
       - name: Go tests
         run: |
           echo "getting dependencies...".
           go get -v -u ./...
-          cd ./src/github.com/${{ github.repository }}
           echo "go test for ${{ matrix.os }} and version ${{ matrix.go_version }}".
           go test -v ./...
