- add feature to download artifacts from nexus 3 - create interface to use nexus2 or nexus3 implementations - fix bug when file extension isn't passed - add new options to specify nexus version (2 or 3) - update README.md

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
           echo "getting dependencies...".
           go get -v -u ./...
           echo "go test for ${{ matrix.os }} and version ${{ matrix.go_version }}".
-          go test -v ./...
+          go test -v ./... -cover
